[project]
name = "unified-sql-layer"
version = "0.1.0"
description = ""
authors = [
    {name = "SimonH",email = "professional.simonhossain@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
